fix overflow-x on autocomplete-result-list

--- a/roseboxlib.css
+++ b/roseboxlib.css
@@ -287,6 +287,7 @@ html:
     padding: 0;
     box-sizing: border-box;
     overflow-y: auto;
+    overflow-x: hidden;
     background: #282828;
     list-style: none;
     box-shadow: 0 2px 2px rgba(0, 0, 0, .16);
